# libstarlark

./: CMakeLists.txt  test.sh
src/: CMakeLists.txt  bytecode.c  bytecode.h  compiler.c  compiler.h  gc.c  gc.h  main.c  opcodes.h  starlark.h  util.c  util.h  value.c  value.h  vector.h  vm.c  vm.h
src/py/: CMakeLists.txt  python.c
tests/: vm_test.py
